--- a/src/main/resources/lru/linmul/scene.fxml
+++ b/src/main/resources/lru/linmul/scene.fxml
@@ -11,8 +11,8 @@
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutY="14.0" prefHeight="16.0" prefWidth="284.0" text="JavaFxTest" />
       <Separator layoutX="1.0" layoutY="31.0" prefHeight="17.0" prefWidth="284.0" />
-      <PasswordField id="passwordField" layoutX="67.0" layoutY="79.0" promptText="Mot de passe" />
-      <TextField id="usernameField" layoutX="67.0" layoutY="48.0" promptText="Nom d'Utilisateur" />
-      <Button layoutX="102.0" layoutY="115.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Comfirmer" />
+      <PasswordField fx:id="passwordField" layoutX="67.0" layoutY="79.0" promptText="Mot de passe" />
+      <TextField fx:id="usernameField" layoutX="67.0" layoutY="48.0" promptText="Nom d'Utilisateur" />
+      <Button layoutX="102.0" layoutY="115.0" onAction="#handleButtonAction" text="Comfirmer" />
    </children>
 </AnchorPane>
